--- a/templates/myboard_users/404.html
+++ b/templates/myboard_users/404.html
@@ -7,7 +7,7 @@
         <div class="col-12 text-center">
             <span class="display-1 d-block">404</span>
             <div class="mb-4 lead">Page Not Found</div>
-            <a href="/" class="btn btn-link">Return Home</a>
+            <a href="/" class="btn btn-link">To Home</a>
         </div>
     </div>
 </div>
