--- a/templates/myboard/question_form.html
+++ b/templates/myboard/question_form.html
@@ -25,7 +25,7 @@
              <label for="content" class="form-label mb-1">Content</label>
             <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-dark">Save</button>
     </form>
 </div>
 {% endblock %}
