--- a/templates/myboard_partials/navbar.html
+++ b/templates/myboard_partials/navbar.html
@@ -1,6 +1,6 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom justify-content-end">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" href="{% url 'myboard:index' %}">MyBoard</a>
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
