staff_detail error fix

--- a/templates/myinventory/staff_detail.html
+++ b/templates/myinventory/staff_detail.html
@@ -27,19 +27,19 @@
                                     <tbody>
                                         <tr>
                                             <th scope="row">Name</th>
-                                            <td>{{ user.username }}</td>
+                                            <td>{{ workers.username }}</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Email</th>
-                                            <td>{{ user.email }}</td>
+                                            <td>{{ workers.email }}</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Phone</th>
-                                            <td>{{ user.profile.phone }}</td>
+                                            <td>{{ workers.profile.phone }}</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Address</th>
-                                            <td>{{ user.profile.address }}</td>
+                                            <td>{{ workers.profile.address }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
