--- a/templates/myboard_partials/category_bar.html
+++ b/templates/myboard_partials/category_bar.html
@@ -2,13 +2,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify-content-center">
   <ul class="navbar-nav ml-auto">
     <li>
-      <a class="nav-link" href="/myboard/qna/">QNA</a>
+      <a class="nav-link" href="/myboard/QnA/">QnA</a>
     </li>
     <li>
-      <a class="nav-link" href="/myboard/free/">FREE</a>
+      <a class="nav-link" href="/myboard/Free/">Free</a>
     </li>
     <li>
-      <a class="nav-link" href="/myboard/notice">NOTICE</a>
+      <a class="nav-link" href="/myboard/Python">Python</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/myboard/Go">Go</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/myboard/Javascript">Javascript</a>
+    </li>
+    <li>
+      <a class="nav-link" href="/myboard/notice">Notice</a>
     </li>
   </ul>
 </nav>
