Notice board change

--- a/templates/myboard_partials/category_bar.html
+++ b/templates/myboard_partials/category_bar.html
@@ -17,7 +17,7 @@
       <a class="nav-link" href="/myboard/Javascript">Javascript</a>
     </li>
     <li>
-      <a class="nav-link" href="/myboard/notice">Notice</a>
+      <a class="nav-link" href="/myboard/Notice">Notice</a>
     </li>
   </ul>
 </nav>
