question_detail change

--- a/templates/myboard/question_detail.html
+++ b/templates/myboard/question_detail.html
@@ -58,7 +58,7 @@
                     <div class="card-text">{{ answer.content|mark }}</div> <!-- markdown is applied-->
                     <div class="d-flex justify-content-end">
                         <div class="badge bg-light text-dark p-2 text-start">
-                            <div class="mb-2">{{ question.author.username }}</div>
+                            <div class="mb-2">{{ answer.author.username }}</div>
                             <div>Created at: {{ answer.create_date }}</div>
                             {% if answer.modify_date %}
                             <div>Edited at: {{ answer.modify_date }}</div>
